# cpp-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: provide-dependencies.sh
.github/workflows/: run-tests.yml
src/: main.cpp  nba.hpp  person.hpp  player.hpp  team.cpp  team.hpp
tests/: test.cpp  test1.cpp
